--- a/AlpataAmatörKüme.csproj
+++ b/AlpataAmatörKüme.csproj
@@ -135,7 +135,9 @@
     <Compile Include="Controllers\AdminDenemeController.cs" />
     <Compile Include="Controllers\FiksturController.cs" />
     <Compile Include="Controllers\GrupBilgiController.cs" />
+    <Compile Include="Controllers\HakemController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OyuncuBilgiController.cs" />
     <Compile Include="Controllers\PuanBilgiController.cs" />
     <Compile Include="Controllers\TakimBilgiController.cs" />
     <Compile Include="Global.asax.cs">
@@ -2597,6 +2599,8 @@
     <Content Include="Views\AdminDeneme\GetTakimBilgiAd.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\AdminDeneme\AddTakimBilgiAd.cshtml" />
+    <Content Include="Views\OyuncuBilgi\AddOyuncuBilgi.cshtml" />
+    <Content Include="Views\Hakem\AddHakem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
